--- a/style.css
+++ b/style.css
@@ -1,6 +1,34 @@
+body {
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/*background-image: url("img/NewYear.jpg");*/
+    /*background-image: url("img/sale.jpg");*/
+    background-image: url("img/program.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.timer{
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    width: 390px;
+    height:170px;
+    margin: -50px 0 0 -100px;
+    text-align: center;
+    background: #fff;
+    opacity: 0.8;
+	border-radius: 30px;	
+}
+
 .timer__items {
     display: flex;
-    font-size: 48px;
+    font-size: 48px;   
+    justify-content: center;
   }
 
 .timer__item {
@@ -27,3 +55,10 @@
     position: absolute;
     right: -15px;
   }
+
+.timer__result{
+    margin: 5px;
+    font-weight: bold;
+    color: red;
+    font-size: 14pt;
+}
